sugaring and docs, update older elements

--- a/skunkwerk/generation-3/polymer-5/elements/x-pages.html
+++ b/skunkwerk/generation-3/polymer-5/elements/x-pages.html
@@ -16,7 +16,7 @@
     name: 'x-pages',
     created: function() {
       this.publishProperty('selected');
-      this.watch('selected', this.selectedChanged);
+      //this.watch('selected', this.selectedChanged);
       // eek
       setTimeout(function() {
         this.selected = 0;
