--- a/skunkwerk/generation-3/polymer-5/elements/x-repeater.html
+++ b/skunkwerk/generation-3/polymer-5/elements/x-repeater.html
@@ -18,7 +18,7 @@
       this.style.display = 'block';
       //
       this.publishProperty('items');
-      this.watch('items', this.itemsChanged);
+      //this.watch('items', this.itemsChanged);
       //
       this.publishProperty('kind');
       this.attributeChanged('kind');
