--- a/skunkwerk/generation-3/perf-test/index.html
+++ b/skunkwerk/generation-3/perf-test/index.html
@@ -9,6 +9,7 @@
   <!--<frame-tester src="../polymer-1/projects/mail/app.html"></frame-tester>-->
   <!--<frame-tester src="../polymer-2/projects/mail/app.html"></frame-tester>-->
   <frame-tester src="../polymer-3/projects/mail/app.html"></frame-tester>
+  <frame-tester src="../polymer-6/projects/mail/app.html"></frame-tester>
   <frame-tester src="../polymer-4/projects/mail/app.html"></frame-tester>
   <frame-tester src="../polymer-5/projects/mail/app.html"></frame-tester>
   
@@ -39,7 +40,7 @@
   
     Polymer({
       name: 'frame-tester',
-      runs: 20,
+      runs: 30,
       info: 'waiting',
       created: function() {
         this.frame = this.$('#frame');
