element/project tweaks

--- a/skunkwerk/generation-3/polymer-a/elements/x-route.html
+++ b/skunkwerk/generation-3/polymer-a/elements/x-route.html
@@ -9,12 +9,8 @@
     ],
     created: function() {
       // TODO(sjmiles): ug
-      this.async(function() {
-        this.parseLocation();
-      });
-      addEventListener('popstate', function() {
-        this.parseLocation();
-      }.bind(this));
+      this.async(this.parseLocation);
+      addEventListener('popstate', this.parseLocation.bind(this));
     },
     parseLocation: function() {
       this.route = location.hash.slice(1);
